Test/Files/Parser/FullParserTestCases/Good/FullTests/testcase92-02.java

class a {
public static void main (String[] args) {{{{{{{{{{{

System.out.println(new a () );

}}}}}}}}}}}}